--- a/media/scss/homepage.scss
+++ b/media/scss/homepage.scss
@@ -47,7 +47,7 @@
 
 		.package-item {
 			background-color: lighten($silver, 20%);
-			width: 10em;
+			width: 20em;
 			padding: 0.5em;
 			margin-top: 0.5em;
 			border-radius: 0.2em;
